# high-hive

./: .gitignore  CMakeLists.txt  README.md  todo.md
cpp/: .gitignore  CMakeLists.txt  pretrain_main.cpp  train_main.cpp
cpp/learning/: alphazero_engine.h
cpp/learning/config/headers/: config.h
cpp/learning/data/: sgf_parser.cpp
cpp/learning/data/headers/: sgf_parser.h
cpp/learning/mcts/: mcts.cpp
cpp/learning/mcts/headers/: mcts.h
cpp/learning/nn/: action_encoder.cpp  neural_net.cpp  state_encoder.cpp
cpp/learning/nn/headers/: action_encoder.h  neural_net.h  state_encoder.h
cpp/learning/training/: replay_buffer.cpp  self_play.cpp  trainer.cpp
cpp/learning/training/headers/: replay_buffer.h  self_play.h  trainer.h
cpp/material/: example.cpp
cpp/material/daniele/: 1coord.h  2hexgrid.h  3piece.h  4board.h  5move.h  6state.h  7movegen_place.h  8onehive_articulated.h  9movegen_move.h
cpp/src/: board.cpp  board.h  coords.h  engine.cpp  main.cpp  moves.cpp  moves.h  pieces.h  rules.cpp  rules.h  uhp.cpp  utils.cpp  utils.h
cpp/src/headers/: board.h  coords.h  engine.h  moves.h  pieces.h  rules.h  state.h  uhp.h  utils.h
docs_learning/: cnn_mcts.md  training_guide.md
py/: README.md  pyproject.toml  run.bat
py/src/: board.py  engine.py
resources/: notes.md  reinforcement.md
src/: ai.py  board.py  engine.py  uhp.py
